@@ -1,5 +1,5 @@
 /*
- * "$Id: printers.c,v 1.28 2003/04/08 03:45:14 mike Exp $"
+ * "$Id: printers.c,v 1.29 2003/07/20 03:35:04 mike Exp $"
  *
  *   Printer status CGI for the Common UNIX Printing System (CUPS).
  *
@@ -37,24 +37,26 @@
  * 'main()' - Main entry for CGI.
  */
 
-int				/* O - Exit status */
-main(int  argc,			/* I - Number of command-line arguments */
-     char *argv[])		/* I - Command-line arguments */
+int					/* O - Exit status */
+main(int  argc,				/* I - Number of command-line arguments */
+     char *argv[])			/* I - Command-line arguments */
 {
-  cups_lang_t	*language;	/* Language information */
-  char		*printer;	/* Printer name */
-  http_t	*http;		/* Connection to the server */
-  ipp_t		*request,	/* IPP request */
-		*response;	/* IPP response */
-  ipp_attribute_t *attr;	/* IPP attribute */
-  ipp_status_t	status;		/* Operation status... */
-  char		uri[HTTP_MAX_URI];
-				/* Printer URI */
-  const char	*which_jobs;	/* Which jobs to show */
-  const char	*op;		/* Operation to perform, if any */
- 
+  cups_lang_t	*language;		/* Language information */
+  char		*printer;		/* Printer name */
+  http_t	*http;			/* Connection to the server */
+  ipp_t		*request,		/* IPP request */
+		*response;		/* IPP response */
+  ipp_attribute_t *attr;		/* IPP attribute */
+  ipp_status_t	status;			/* Operation status... */
+  char		uri[HTTP_MAX_URI];	/* Printer URI */
+  const char	*which_jobs;		/* Which jobs to show */
+  const char	*op;			/* Operation to perform, if any */
+  static const char	*def_attrs[] =	/* Attributes for default printer */
+		{
+		  "printer-name",
+		  "printer-uri-supported"
+		};
 
-  setbuf(stdout, NULL);
 
  /*
   * Get any form variables...
@@ -115,6 +117,10 @@ main(int  argc,			/* I - Number of command-line arguments */
 
     ippAddString(request, IPP_TAG_OPERATION, IPP_TAG_LANGUAGE,
         	 "attributes-natural-language", NULL, language->language);
+
+    ippAddStrings(request, IPP_TAG_OPERATION, IPP_TAG_KEYWORD,
+                  "requested-attributes",
+		  sizeof(def_attrs) / sizeof(def_attrs[0]), NULL, def_attrs);
 
     if ((response = cupsDoRequest(http, request, "/")) != NULL)
     {
@@ -205,8 +211,7 @@ main(int  argc,			/* I - Number of command-line arguments */
                    uri);
     }
 
-    ippAddString(request, IPP_TAG_OPERATION, IPP_TAG_KEYWORD,
-        	 "requested-attributes", NULL, "all");
+    ippGetAttributes(request, TEMPLATES, "printers.tmpl", getenv("LANG"));
 
    /*
     * Do the request and get back a response...
@@ -264,6 +269,8 @@ main(int  argc,			/* I - Number of command-line arguments */
       if ((which_jobs = cgiGetVariable("which_jobs")) != NULL)
 	ippAddString(request, IPP_TAG_OPERATION, IPP_TAG_KEYWORD, "which-jobs",
                      NULL, which_jobs);
+
+      ippGetAttributes(request, TEMPLATES, "jobs.tmpl", getenv("LANG"));
 
      /*
       * Do the request and get back a response...
@@ -371,5 +378,5 @@ main(int  argc,			/* I - Number of command-line arguments */
 
 
 /*
- * End of "$Id: printers.c,v 1.28 2003/04/08 03:45:14 mike Exp $".
+ * End of "$Id: printers.c,v 1.29 2003/07/20 03:35:04 mike Exp $".
  */
